--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>
+		<version>2.2.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.luzhoumin</groupId>
@@ -15,7 +15,7 @@
 	<description>MBlog Management</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>13</java.version>
 	</properties>
 
 	<dependencies>
@@ -116,9 +116,7 @@
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 				<version>1.3.7</version>
 				<configuration>
-					<configurationFile>${basedir}/src/main/resources/generator/generatorConfig-EasyM.xml
-					</configurationFile>
-					<!--					<configurationFile>${basedir}/src/main/resources/generator/generatorConfig-Business.xml</configurationFile>-->
+					<configurationFile>${basedir}/src/main/resources/generator/generator.xml</configurationFile>
 					<overwrite>true</overwrite>
 					<verbose>true</verbose>
 				</configuration>
